# labfolder2elabftw

./: .gitignore  README.md  __init__.py  coordinator.py  environment.yml  extractor.py  fetcher.py  importer.py  labfolder.py  labfolder_client.py  patch_coordinator.diff  patch_fetcher.diff  patch_transformer.diff  pyproject.toml  transformer.py
src/: __init__.py  cli.py  coordinator.py  fetcher.py  importer.py  transformer.py  utils.py
src/core/: __init__.py  coordinator.py
src/elabftw/: __init__.py  importer.py
src/labfolder/: __init__.py  client.py  fetcher.py
src/transformer/: __init__.py  transformer.py
src/utils/: __init__.py  pdf.py
