[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labfolder2elab"
version = "0.1.0"
description = "Migration tool from Labfolder to eLabFTW"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
  "numpy",
  "xlsxwriter",
  "elapi==2.3.3",
  "click==8.1.8",
  "colorama==0.4.6",
  "dynaconf==3.2.11",
  "h11==0.14.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "httpcore==0.17.3",
  "httpx==0.24.1",
  "httpx-auth==0.17.0",
  "hyperframe==6.1.0",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",
  "rich==13.9.4",
  "shellingham==1.5.4",
  "typer==0.9.4",
  "werkzeug==3.1.3",
  "pyarrow==19.0.0"
]

[project.urls]
Homepage = "https://github.com/dantypas3/labfolder2elabftw"

[project.scripts]
labfolder2elab = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

